--- a/playbooks/obligatorio.yml
+++ b/playbooks/obligatorio.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: Sv2
   roles:
-  - instalacion 
-  - configuracion 
+  - configuracion        
+  - instalacionCentos
+  - instalacionUbuntu  
 ...    
